@@ -10,6 +10,7 @@ namespace Mono.Debugging.Backend
 		ObjectValue[] GetLocalVariables (int frameIndex);
 		ObjectValue[] GetParameters (int frameIndex);
 		ObjectValue GetThisReference (int frameIndex);
+		ObjectValue[] GetAllLocals (int frameIndex);
 		ObjectValue[] GetExpressionValues (int frameIndex, string[] expressions, bool evaluateMethods);
 		CompletionData GetExpressionCompletionData (int frameIndex, string exp);
 		AssemblyLine[] Disassemble (int frameIndex, int firstLine, int count);
