@@ -1,3 +1,9 @@
+2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Debugging.Client/StackFrame.cs,
+	  Mono.Debugging.Backend/IBacktrace.cs: Added api for getting all
+	  locals of a stack frame.
+
 2008-07-22  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Debugging.Client/BreakEvent.cs,
